# simple-rest-api-1011

./: Makefile  README.md  pyproject.toml
rest_api/: __init__.py  app.py  students.json
rest_api/scripts/: start.py
